# katas

./: .gitignore  pyproject.toml
katas/: ast.py  bowling.py  bowling2.py  cupcake.py  gildedrose.py  gildedrose2.py
katas/evilcorp/: __init__.py  evilcorp.py
katas/gameoflife/: GameOfLife.py  parser.py
katas/rpg/: character.py
tests/: test_Grid.py  test_ast.py  test_bowling2.py  test_bowling_frame.py  test_bowling_game.py  test_cupcake.py  test_evilcorp.py
tests/gameoflife/: test_GameOfLife.py  test_Grid.py  test_parser.py
tests/gildedrose/: test_gilded_rose.py  test_gilded_rose_new.py  texttest_fixture.py
tests/gildedrose2/: test_gilded_rose.py  texttest_fixture.py
tests/rpg/: test_character.py
